--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -4,15 +4,21 @@
 }
 
 .one-entry-container {
-    max-height: 3.6em;
-    line-height: 1.8em;
+    max-height: 10rem;
+    line-height: 1.5em;
+    max-width:50rem;
     overflow: hidden;
+    word-wrap: break-word;
+    line-break: loose;
     text-overflow: ellipsis;
     display: -webkit-box;
     -webkit-line-clamp: 5;
-    line-clamp: 2;
+    -webkit-box-orient: vertical;
+    line-clamp: 5;
     border-style: outset;
     margin: 5px;
+    /* content: "/n"; */
+    white-space: pre-wrap;
 }
 
 .one-entry-container:hover {
